--- a/scss/style.scss
+++ b/scss/style.scss
@@ -186,7 +186,7 @@ nav .icon-burger .line {
 
 .intro {
   background-image: linear-gradient(rgba(#000000, 0.5)),
-    url(../img/group_pic.png);
+    url(../img/group_pic.jpg);
   height: 75vh;
   width: 100vw;
   background-size: cover;
