--- a/scss/style.css
+++ b/scss/style.css
@@ -226,8 +226,8 @@ nav .icon-burger .line {
 }
 
 .intro {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5))), url(../img/group_pic.png);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5)), url(../img/group_pic.png);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5))), url(../img/group_pic.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5)), url(../img/group_pic.jpg);
   height: 75vh;
   width: 100vw;
   background-size: cover;
