--- a/scss/style.scss
+++ b/scss/style.scss
@@ -188,7 +188,7 @@ nav .icon-burger .line {
   background-image: linear-gradient(rgba(#000000, 0.5)),
     url(../img/group_pic.jpg);
   height: 75vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
