--- a/scss/about_us.css
+++ b/scss/about_us.css
@@ -217,7 +217,7 @@ nav .icon-burger .line {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25))), url(../img/image1.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.25)), url(../img/image1.jpg);
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -448,5 +448,11 @@ nav .icon-burger .line {
   color: #ffffff;
   padding: 1rem;
   margin-top: 2rem;
+}
+
+.credit p {
+  color: #0e3663;
+  font-size: 1.8rem;
+  text-align: center;
 }
 /*# sourceMappingURL=about_us.css.map */
