--- a/scss/contact_us.scss
+++ b/scss/contact_us.scss
@@ -176,7 +176,7 @@ nav .icon-burger .line {
   background-image: linear-gradient(rgba(#000000, 0.25)),
     url(../img/contact-us.jpg);
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
