--- a/scss/events.css
+++ b/scss/events.css
@@ -388,20 +388,22 @@ h2 {
   transition: all 0.5s ease-out;
 }
 
+.image:link::before,
+.image:visited::before,
 .image:hover::before,
-.image:focus::before,
 .image:active::before {
   background-color: rgba(0, 0, 0, 0.63);
 }
 
+.image:link .text,
+.image:visited .text,
 .image:hover .text,
-.image:focus .text,
 .image:active .text {
   display: block;
   content: "";
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
   .grids {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -413,7 +415,7 @@ h2 {
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1300px) {
   .image {
     width: 80%;
   }
@@ -426,5 +428,9 @@ h2 {
   color: #ffffff;
   padding: 1rem;
   margin-top: 2rem;
+}
+
+.ongoing_events li {
+  font-size: 17px;
 }
 /*# sourceMappingURL=events.css.map */
