--- a/scss/members.css
+++ b/scss/members.css
@@ -217,7 +217,7 @@ nav .icon-burger .line {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25))), url(../img/img2.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.25)), url(../img/img2.jpg);
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -249,7 +249,7 @@ nav .icon-burger .line {
   margin: 2rem auto;
   padding: 1rem;
   line-height: 2.4rem;
-  width: 60%;
+  width: 65%;
 }
 
 .login-hour {
@@ -294,5 +294,15 @@ nav .icon-burger .line {
   color: #ffffff;
   padding: 1rem;
   margin-top: 2rem;
+}
+
+.title-reasons {
+  border: 0.1rem solid black;
+  padding: 1rem;
+  display: inline-block;
+}
+
+.title-reasons p {
+  color: #5387c7;
 }
 /*# sourceMappingURL=members.css.map */
