--- a/scss/contact_us.css
+++ b/scss/contact_us.css
@@ -217,7 +217,7 @@ nav .icon-burger .line {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25))), url(../img/contact-us.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.25)), url(../img/contact-us.jpg);
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
